[package]
name = "flowerpot"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "c2ed4913" }
noise = "0.8"

[lib]

[[bin]]
name = "flowerpot_crops_client"
path = "src/crops/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_crops_server"
path = "src/crops/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_fauna_client"
path = "src/fauna/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_fauna_server"
path = "src/fauna/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_game_client"
path = "src/game/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_game_server"
path = "src/game/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_map_client"
path = "src/map/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_map_server"
path = "src/map/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_player_client"
path = "src/player/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_player_server"
path = "src/player/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_terrain_client"
path = "src/terrain/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_terrain_server"
path = "src/terrain/server.rs"
required-features = ["server"]

[[bin]]
name = "flowerpot_weather_client"
path = "src/weather/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_weather_server"
path = "src/weather/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]