[workspace]
members = [ "core/*", "utils/*" ]

[workspace.dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "b3dce07" }
flowerpot-common = { path = "." }
lazy_static = "1.4"
noise = "0.8"
rapier3d = "0.17"
rustrict = "0.7"

[package]
name = "flowerpot-common"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
