[workspace]
members = [ "common", "core/*", "utils/*" ]

[workspace.dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "9f74b8f" }
flowerpot-common = { path = "common" }
lazy_static = "1.4"
noise = "0.8"
rapier3d = "0.17"
rustrict = "0.7"

[package]
name = "flowerpot"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true
flowerpot-common.workspace = true
lazy_static.workspace = true

[[bin]]
name = "flowerpot_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
