[package]
name = "flowerpot-actions"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true

[[bin]]
name = "flowerpot_actions_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_actions_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
