[package]
name = "flowerpot-crops"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true
flowerpot-common.workspace = true

[[bin]]
name = "flowerpot_crops_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_crops_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
