[package]
name = "flowerpot-terrain"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true
flowerpot-common.workspace = true
itertools = "0.11.0"
noise.workspace = true
rapier3d.workspace = true

[[bin]]
name = "flowerpot_terrain_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "flowerpot_terrain_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
