[package]
name = "things"
edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api.workspace = true
flowerpot-common.workspace = true

[[bin]]
name = "things_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "things_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
